--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     background-image: url('index.svg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
    }
   
   .sidenav {
