--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
     top: 50%;
     right: 50%;
     transform: translate(50%,-50%);
-    color: $text;
+    color: text;
     max-width: 90%;
     padding: 2em 3em;
     background: rgba(0, 0, 0, 0.4);
