--- a/style.css
+++ b/style.css
@@ -52,9 +52,9 @@ body {
     background: rgba(0, 0, 0, 0.4);
     text-shadow: 0px 0px 2px #131415;
     font-family: 'Open Sans', sans-serif;
-  }
-  
+    border-radius: 25px;
+    }
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
-  }
+    }
