--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@ body {
     margin: 0;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: black;
-    background-image: url('index.svg');
+    background-image: url('index\ \(1\).svg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: fixed;;
    }
   
   .sidenav {
